# aicoding-ghost1

./: .clinerules  .dockerignore  .gitignore  Dockerfile  Readme.md  pyproject.toml  requirements.txt
app/src/: main.py
app/src/config/: settings.py
app/src/data/: default_topics.py  default_topics.py 
app/src/endpoints/: fortune.py
app/src/prompt/: create_topics_prompts.py  ghost_tone_nohistory_prompts.py  ghost_tone_prompts.py  summary_prompts.py
app/src/repository/: external_repository.py  mock_repository.py
app/src/schema/: schema.py
app/src/services/: create_topics_service.py  fortune_block_service.py  ghost_tone_service.py  parse_logic_data_service.py  summary_service.py
app/src/utils/: llm_client.py
app/tests/mockdata/: client_input.json  logic_data.xml
cdk/: __init__.py  app.py  app_runner_stack.py  codepipeline_stack.py  requirements.txt
docs/: create_markdown.md  development_plan.md  environment_setup_status.md  error_analysis.md  how_to_setup.md  how_to_use_bedrock_claude.md  task.md
mock_data/: view_history.json
